---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: ????
  Info:
    - Switch to player placeable entities
    - Rebrand as undersea data cable
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2024. 11. 29
  Info:
    - Setup thumbnail and locale
    - Fork the offshore pump
    - Allow building tiles over the undersea cable
    - Dip my toes into pathfinding
    - Get a positive pathfinder result
    - Place the heat pipes down
    - Try to deal with diagonal gaps
    - Attempt to improve diagonal connectivity
    - Still fail to get it right for all directions
    - Automated attempt 1
    - Even more broken attempt
    - Why does this not work either
    - Also does not work
    - Nothing bloody works
    - Fall back to some hand written stuff
    - I feel like i am onto something
    - This finally appears to work (but not for extreme distances)
    - Also broken
    - Sigh, also broken
    - if this does not work i am gonna do manual placement
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 11. 29
  Info:
    - Initial commit