@@ -1,3 +1,5 @@
 [entity-name]
-undersea-data-cable=Undersea cable
-undersea-data-cable-landing-point=Undersea cable landing point
+undersea-data-cable=Undersea data cable
+
+[space-location-name]
+undersea-data-cable=Undersea data cable
