@@ -4,6 +4,7 @@ Date: ????
   Info:
     - Switch to player placeable entities
     - Rebrand as undersea data cable
+    - Setup hidden surface i plan to reuse
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.2
 Date: 2024. 11. 29
